Fix sorting students + add student table hover effect + align student table text to center

--- a/static/Graphite/css/style.css
+++ b/static/Graphite/css/style.css
@@ -5,3 +5,15 @@
 .left {
     color: red;
 }
+
+.text-align-center {
+    text-align: center;
+}
+
+.text-align-right {
+    text-align: right;
+}
+
+.text-align-left {
+    text-align: left;
+}
